--- a/michelle_source.html
+++ b/michelle_source.html
@@ -161,7 +161,8 @@
             <span style="color: #007bff; font-weight: bold;">Art:koahri1</span>
             <span style="color: #007bff; font-weight: bold;">Live2D:MedL2D</span>
 
-
+        </div>
+        <div id="status">
             <span id="thinking-msg" style="display: none; color: #007bff; font-weight: bold;">Michelle is
                 thinking...💭</span>
             <div id="progress-container"
